# clapy

./: .gitignore  LICENSE.md  README  README.md  clapy.py  data_minuit_1000  fit.ipynb  gen_data.ipynb  generate_data.ipynb  generate_plots.ipynb  paper_ab  paper_ab3  paper_ab_new  paper_data_gamma.pandas  paper_img_data.npz  paper_plots.ipynb  paper_plots_new.ipynb  paper_simulations-gamma.ipynb  paper_simulations.ipynb  setup.py
clapy/: __init__.py  ccla.py  cla.py  plot.py  utils.py
example/: fit.ipynb  paper_plots.ipynb
src/: CMakeLists.txt  animal.cpp  animal.h  ccla.cpp  cell.cpp  cell.h  main.cpp  rand.cpp  rand.h  types.cpp  types.h
